<resources>
    <string name="app_name">CV Builder</string>
    <string name="u_fname">Muhammad Tayyab</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="projects"><b>Waziup</b>:Android Application for farmers using IoT technology.\n<b>Awtar</b>:Music entertainment application in Ethiopia.\n<b>Vere Italie</b>:Italian based restaurant booking app and website.\n<b>ECOMUB</b>:business solutions in ecommerce and logistics sectors.</string>
    <string name="career_note"><b>Completed</b> on-campus studies and currently taking distance education courses to complete a Master\'s Degree in Computer Science (Available for full-time, <b>W-2</b> employment).</string>
    <string name="work_experience"><b>Languages</b>: Java 8, Kotlin\n<b>Web Services</b>: RESTful API, Microservices\n<b>Design Patterns</b>: Dependency Injection, Dagger1, Dagger2, Adapter, Observer,Factory, MVP, MVC, MVVM\n<b>SDLC</b>: Agile/Scrum, Test-Driven Development
    </string>
    <string name="career_note_label">Career Note</string>
    <string name="about_me_label">About Me</string>
    <string name="about_me">Dedicated and passionate application developer with more than 2 years of hands-on experience using the full Software Development Life Cycle process to design and implement a variety of software, plugins, and tools. Solid skills in both front-end and back-end development, with excellent problem-solving abilities and a consistent drive to learn new technologies. Well-trained in the development of Java projects using the latest Java technologies like Spring Boot, Node, Express, React, Hibernate and MongoDB.</string>
    <string name="colleges">My Colleges</string>
    <string name="education">Education</string>
    <string name="java_developer">Java Developer</string>
    <string name="_11_8_2020">11/8/2020</string>
    <string name="certification">Certification</string>
    <string name="comsats">COMSATS University</string>
    <string name="bscs">Bachelors of Science in Computer Science</string>
    <string name="mscs">Master of Science in Computer Science</string>
    <string name="miu"><b>Maharishi International University</b></string>
    <string name="oracle_db_12c_administrator_certified_professional">Oracle DB 12c Administrator Certified Professional</string>
    <string name="_2_5_2019">2/5/2019</string>
    <string name="github">GitHub</string>
    <string name="mtayyab">MTayyab</string>
    <string name="linkedin">LinkedIn</string>
    <string name="mtayyab_linkedIn">mo-tayyab</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="u_phone">631-512-9213</string>
    <string name="my_contact">My Contact</string>
    <string name="voluntary_work">Voluntary Work</string>
    <string name="peace_corps">Peace Corps</string>
    <string name="educating_young_students_in_bekoji">Educating Young Students in Bekoji</string>
    <string name="_2020">2020</string>
    <string name="exp_label">Work Experience</string>
    <string name="meta_facebook_inc">Meta - Facebook Inc.</string>
    <string name="virtual_reality_content_engineer">Virtual Reality Content Engineer</string>
    <string name="_2020_present">2020 - Present</string>
    <string name="google">Google</string>
    <string name="application_developer_for_youtube">Application Developer for Youtube</string>
    <string name="_2018_2020">2018 - 2020</string>
    <string name="amazon">Amazon</string>
    <string name="sde_ii">SDE II</string>
    <string name="_2016_2018">2016 - 2018</string>
    <string name="kforce">Kforce</string>
    <string name="sr_full_stack_engineer">Sr Full Stack Engineer</string>
    <string name="_2014_2016">2014 - 2016</string>
    <string name="projects_label">Projects</string>
    <string name="microsoft_devops_engineer">Microsoft DevOps Engineer</string>
    <string name="_2018">2018</string>
    <string name="linux_essentials">Linux Essentials</string>
    <string name="_2019">2019</string>
    <string name="red_hat_system_administrator">Red Hat System Administrator</string>
    <string name="_2017_2020">2017-2020</string>
    <string name="mobile_application_engineer">Mobile Application Engineer</string>
    <string name="icog_labs">Icog-Labs</string>
    <string name="machine_learning_intern">Machine Learning Intern</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="saved_theme">theme</string>
    <string name="home_menu">Home</string>
    <string name="about_me_menu">About Me</string>
    <string name="work_menu">Work</string>
    <string name="contact_menu">Contact</string>
    <string name="login_title">Sign in to your account</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="twitter">https://twitter.com/adukidus</string>
    <string name="u_linkedin">https://www.linkedin.com/in/kidus-tekeste/</string>
    <string name="u_github">https://github.com/KidusMT</string>
    <string name="u_email">mtayyab@miu.edu</string>
    <string name="email_subject">MDP Course</string>
    <string name="email_body">Please, reach out to me for more information.</string>
    <string name="my_phone">tel:3145839972</string>
    <string name="intent_filter">mailto:</string>
    <string name="intent_key">web</string>
    <string name="linked_in_title">LinkedIn</string>
    <string name="twitter_in_title">Twitter</string>
    <string name="github_in_title">GitHub</string>
    <string name="_4_7_2019">4/7/2019</string>
    <string name="_3_8_2020">3/8/2020</string>
    <string name="_1_4_2019">1/4/2019</string>
    <string name="_8_9_2018">8/9/2018</string>
    <string name="setting">Setting</string>
    <string name="add">add</string>
    <string name="logout">Logout</string>
    <string name="login_email">Username(required)</string>
    <string name="login_password">Password(required)</string>
    <string name="login_email_hint">example@domain.com</string>
    <string name="login_password_hint">*******</string>
    <string name="login_btn">Login</string>
    <string name="login_don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="login_link_sign_up">Create a new account</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="activity_login_auto_hint_email">Email</string>
    <string name="activity_login_auto_hint_password">Password</string>
    <string name="dialog_base_url_auto_hint_url">Url</string>
    <string name="login_user_key">user</string>
    <string name="login_pass_key">pass</string>
</resources>