<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:alpha="0.6"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:src="@drawable/profile"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10sp"
                    app:civ_shadow_color="#3f51b5"
                    tools:ignore="MissingClass" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/profile_image"
                    android:background="#77ffffff"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/mtayyab"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_vertical"
                        android:text="@string/software_engineer"
                        android:textSize="18sp" />
                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/horizontal_margin_8"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/career_note_label"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/horizontal_margin_8"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/career_note"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/horizontal_margin_8"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/exp_label"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/horizontal_margin_8"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/work_experience"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/horizontal_margin_8"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/projects_label"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/horizontal_margin_8"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/projects"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>